--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;1,300;1,400&display=swap');
+
+
+:root {
+    --Primary-dark : #777651e5;
+    --Primary-light : #009367;
+}
+.icon{
+    color: var(--Primary-dark)
+}
+@layer base{
+    body{
+        @apply font-[Lato]
+    }
+    li{
+        @apply p-4 
+    }
+    h1{
+        @apply text-3xl md:text-4xl font-bold
+    }
+    h2{
+        @apply text-3xl  font-bold
+    }
+    h3{
+        @apply text-3xl  font-bold
+    }
+
+    button{
+        @apply p-3 border bg-gradient-to-r from-[var(--Primary-dark)] to-[var(--Primary-light)] text-white rounded-md
+    }
+
+    .icon{
+        @apply text-2xl cursor-pointer 
+    }
 }
